注册跳转页面

--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
 <div class="aui-content-padded">
     <button id="login"><p><div class="aui-btn aui-btn-info aui-btn-block">登录</div></p></button>
     <br>
-    <a href="mine.html"><p><div class="aui-btn aui-btn-warning aui-btn-block aui-btn-outlined">注册新用户</div></p></a>
+    <a href="logup.html"><p><div class="aui-btn aui-btn-warning aui-btn-block aui-btn-outlined">注册新用户</div></p></a>
 </div>
 <script>
     document.getElementById("login").onclick = function(){
