--- a/logup.html
+++ b/logup.html
@@ -74,27 +74,7 @@
     </ul>
 </div>
 <div class="aui-content-padded">
-    <div class="aui-btn aui-btn-block aui-btn-info" tapmode onclick="openDialog('text')">注册</div>
+    <div class="aui-btn aui-btn-block aui-btn-info"><a href="success.html">注册</a></div>
 </div>
-<script type="text/javascript" src="script/aui-dialog.js" ></script>
-<script type="text/javascript">
-    var dialog = new auiDialog({})
-    function openDialog(type){
-        switch (type) {
-            case "text":
-                dialog.alert({
-                    title:"注册成功",
-                    msg:'请返回重新登录',
-                    buttons:['确定']
-                },function(ret){
-                    console.log(ret)
-                })
-                break;
-            default:
-                break;
-
-        }
-    }
-</script>
 </body>
 </html>
