--- a/shop.html
+++ b/shop.html
@@ -104,7 +104,7 @@
         </script>
     </div>
     <div class="aui-bar-tab-item" tapmode style="background-color: #ffb300">
-        <a href="money.html">
+        <a href="address.html">
             <i class="aui-iconfont aui-icon-paper"></i>
             <div class="aui-bar-tab-label">立即购买</div>
         </a>
