--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="aui-col-xs-3">
             <i class="aui-iconfont aui-icon-video"></i>
-            <div class="aui-grid-label">计生用品</div>
+            <div class="aui-grid-label">图书文具</div>
         </div>
     </div>
 </section>
@@ -63,13 +63,19 @@
                 <p></p>
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <img src="image/demo1.png"/>
+                        <a href="shop/clothes1-1.html">
+                            <img src="image/clothes/male1-2.jpg"/>
+                        </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo2.png" />
+                        <a href="shop/clothes1-2.html">
+                            <img src="image/clothes/male2-2.jpg" />
+                        </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo3.png" />
+                        <a href="shop/clothes2-1.html">
+                            <img src="image/clothes/female1-1.jpg" />
+                        </a>
                     </div>
                 </div>
             </div>
@@ -88,8 +94,101 @@
                     <div class="aui-col-xs-4">
                         <img src="image/demo3.png" />
                     </div>
+                </div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner">
+                <div class="aui-list-item-title">3F箱包手袋</div>
+                <p></p>
+                <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <img src="image/demo1.png" />
+                        <img src="image/demo1.png"/>
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo2.png" />
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo3.png" />
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner">
+                <div class="aui-list-item-title">4F钟表珠宝</div>
+                <p></p>
+                <div class="aui-row aui-row-padded">
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo1.png"/>
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo2.png" />
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo3.png" />
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner">
+                <div class="aui-list-item-title">5F手机数码</div>
+                <p></p>
+                <div class="aui-row aui-row-padded">
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo1.png"/>
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo2.png" />
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo3.png" />
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner">
+                <div class="aui-list-item-title">6F食品生鲜</div>
+                <p></p>
+                <div class="aui-row aui-row-padded">
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo1.png"/>
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo2.png" />
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo3.png" />
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner">
+                <div class="aui-list-item-title">7F家居家装</div>
+                <p></p>
+                <div class="aui-row aui-row-padded">
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo1.png"/>
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo2.png" />
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo3.png" />
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner">
+                <div class="aui-list-item-title">8F图书文具</div>
+                <p></p>
+                <div class="aui-row aui-row-padded">
+                    <div class="aui-col-xs-4">
+                        <img src="image/demo1.png"/>
                     </div>
                     <div class="aui-col-xs-4">
                         <img src="image/demo2.png" />
