--- a/choose.html
+++ b/choose.html
@@ -10,7 +10,7 @@
 <body>
 <!--标签栏-->
 <header class="aui-bar aui-bar-nav">
-    <a class="aui-pull-left aui-btn" href="index1.html">
+    <a class="aui-pull-left aui-btn" href="index.html">
         <span class="aui-iconfont aui-icon-left"></span>
     </a>
     <div class="aui-title">选购（服装）</div>
