--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
 <!--标签栏-->
 <header class="aui-bar aui-bar-nav">
-    <a class="aui-pull-left aui-btn" href="index1.html">
+    <a class="aui-pull-left aui-btn" href="index.html">
         <span class="aui-iconfont aui-icon-left"></span>
     </a>
     <div class="aui-title">用户登录</div>
@@ -46,12 +46,6 @@
     <br>
     <a href="logup.html"><p><div class="aui-btn aui-btn-warning aui-btn-block aui-btn-outlined">注册新用户</div></p></a>
 </div>
-<script>
-    document.getElementById("login").onclick = function(){
-        var request = new XMLHttpRequest();
-        request.open("GET","sever.php?number=" + document.getElementById("username").value);
-        request.send();
-    }
-</script>
+
 </body>
 </html>
