首页更新完成
详情页24页完成

--- a/classify.html
+++ b/classify.html
@@ -6,19 +6,12 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <link rel="stylesheet" type="text/css" href="./css/aui.css" />
-    <style type="text/css">
-        .aui-btn-info{
-            margin-top: 0.7%;
-            margin-bottom: 0.7%;
-            margin-left: 5%;
-        }
-
-    </style>
+    <script src="script/goback.js"></script>
 </head>
 <body>
 <!--标签栏-->
 <header class="aui-bar aui-bar-nav">
-    <a class="aui-pull-left aui-btn" href="index.html">
+    <a class="aui-pull-left aui-btn" href="javascript:void (0);" onclick="GoBack()">
         <span class="aui-iconfont aui-icon-left"></span>
     </a>
     <div class="aui-title">分类</div>
@@ -31,15 +24,76 @@
         <li class="aui-list-item aui-list-item-middle">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">男装</div>
+            </div>
         </li>
         <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">女装</div>
             </div>
         </li>
+    </ul>
+    <ul class="aui-list aui-list-in">
+        <li class="aui-list-header">
+            <h3>家用电器</h3>
+        </li>
+        <li class="aui-list-item aui-list-item-middle">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">电视</div>
+            </div>
+        </li>
         <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
-                <div class="aui-list-item-title">男鞋</div>
+                <div class="aui-list-item-title">冰箱</div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">洗衣机</div>
+            </div>
+        </li>
+    </ul>
+    <ul class="aui-list aui-list-in">
+        <li class="aui-list-header">
+            <h3>箱包手袋</h3>
+        </li>
+        <li class="aui-list-item aui-list-item-middle">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">拉杆箱</div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">背包</div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">钱包</div>
+            </div>
+        </li>
+    </ul>
+    <ul class="aui-list aui-list-in">
+        <li class="aui-list-header">
+            <h3>珠宝配饰</h3>
+        </li>
+        <li class="aui-list-item aui-list-item-middle">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">项链</div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">戒指</div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">墨镜</div>
+            </div>
+        </li>
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">  </div>
             </div>
         </li>
     </ul>
