--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="aui-col-xs-3">
             <i class="aui-iconfont aui-icon-calendar"></i>
-            <div class="aui-grid-label">钟表珠宝</div>
+            <div class="aui-grid-label">珠宝饰品</div>
         </div>
         <div class="aui-col-xs-3">
             <i class="aui-iconfont aui-icon-date"></i>
@@ -86,17 +86,17 @@
                 <p></p>
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/electric-TV1.html">
                             <img src="image/electric/TV1-1.png"/>
                         </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/electric-refrigerator1.html">
                             <img src="image/electric/refrigerator1-1.jpg"/>
                         </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/electric-washing1.html">
                             <img src="image/electric/washing1-1.jpg"/>
                         </a>
                     </div>
@@ -109,17 +109,17 @@
                 <p></p>
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/bags-bag1.html">
                             <img src="image/bags/bag1-1.png"/>
                         </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/bags-box1.html">
                             <img src="image/bags/box1-1.png"/>
                         </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/bags-wallet1.html">
                             <img src="image/bags/wallet1-1.png"/>
                         </a>
                     </div>
@@ -132,17 +132,17 @@
                 <p></p>
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/jewwlry-necklace1.html">
                             <img src="image/jewelry/necklace1-1.png"/>
                         </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/jewelry-watch1.html">
                             <img src="image/jewelry/watch1-1.png"/>
                         </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <a href="shop/">
+                        <a href="shop/jewelry-ring1.html">
                             <img src="image/jewelry/ring1-1.png"/>
                         </a>
                     </div>
@@ -155,13 +155,19 @@
                 <p></p>
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <img src="image/demo1.png"/>
+                        <a href="shop/telephone1.html">
+                            <img src="image/../image/tele/iphonex/iphonex3.png"/>
+                        </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo2.png" />
+                        <a href="shop/telephone2.html">
+                            <img src="image/../image/tele/mix2/mix2.jpg"/>
+                        </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo3.png" />
+                        <a href="shop/telephone3.html">
+                            <img src="image/../image/tele/macbookpro/1-1.jpg"/>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -172,13 +178,22 @@
                 <p></p>
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <img src="image/demo1.png"/>
+                        <a href="shop/food1.html">
+                            <img src="image/../image/food/beef/1.png"/>
+                        </a>
+
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo2.png" />
+                        <a href="shop/food2.html">
+                            <img src="image/../image/food/biscuits/1.png"/>
+                        </a>
+
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo3.png" />
+                        <a href="shop/food3.html">
+                            <img src="image/../image/food/pork/1.png"/>
+                        </a>
+
                     </div>
                 </div>
             </div>
@@ -189,13 +204,19 @@
                 <p></p>
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <img src="image/demo1.png"/>
+                        <a href="shop/furniture1.html">
+                            <img src="image/../image/furniture/desk/1.png"/>
+                        </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo2.png" />
+                        <a href="shop/furniture2.html">
+                            <img src="image/../image/furniture/sofa/1.png"/>
+                        </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo3.png" />
+                        <a href="shop/furniture3.html">
+                            <img src="image/../image/furniture/wallpaper/1.png"/>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -206,13 +227,19 @@
                 <p></p>
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-xs-4">
-                        <img src="image/demo1.png"/>
+                        <a href="shop/book1.html">
+                            <img src="image/../image/book/book1/1.png"/>
+                        </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo2.png" />
+                        <a href="shop/book2.html">
+                            <img src="image/../image/book/book2/1.png"/>
+                        </a>
                     </div>
                     <div class="aui-col-xs-4">
-                        <img src="image/demo3.png" />
+                        <a href="shop/book3.html">
+                            <img src="image/../image/book/book3/1.png"/>
+                        </a>
                     </div>
                 </div>
             </div>
