--- a/shop/clothes1-1.html
+++ b/shop/clothes1-1.html
@@ -9,30 +9,28 @@
     <script src="../script/api.js"></script>
     <script src="../script/aui-slide.js"></script>
     <link rel="stylesheet" href="../css/aui-slide.css">
+    <script src="../script/goback.js"></script>
 </head>
 <body>
 <!--标签栏-->
 <header class="aui-bar aui-bar-nav">
-    <a class="aui-pull-left" href="../choose.html">
+    <a class="aui-pull-left aui-btn" href="javascript:void (0);" onclick="GoBack()">
         <span class="aui-iconfont aui-icon-left"></span>
     </a>
-    <div class="aui-title">男大衣青年2017秋冬新款简约纯色中长款外套潮男毛呢大衣</div>
+    <div class="aui-title">Aape男装秋冬宽松烫金印花假两件连帽卫衣</div>
 </header>
 <!--轮播图片-->
 <link rel="stylesheet" type="text/css" href="/css/aui-slide.css" />
 <div id="aui-slide">
     <div class="aui-slide-wrap" >
         <div class="aui-slide-node bg-dark">
-            <img src="../image/clothes/male1-1.jpg" />
+            <img src="../image/clothes/male3-1.png" />
         </div>
         <div class="aui-slide-node bg-dark">
-            <img src="../image/clothes/male1-2.jpg" />
+            <img src="../image/clothes/male3-2.png" />
         </div>
         <div class="aui-slide-node bg-dark">
-            <img src="../image/clothes/male1-3.jpg" />
-        </div>
-        <div class="aui-slide-node bg-dark">
-            <img src="../image/clothes/male1-4.jpg" />
+            <img src="../image/clothes/male3-3.png" />
         </div>
     </div>
     <div class="aui-slide-page-wrap"><!--分页容器--></div>
@@ -42,7 +40,7 @@
     var slide = new auiSlide({
         container:document.getElementById("aui-slide"),
         // "width":300,
-        "height":260,
+        "height":300,
         "speed":300,
         "autoPlay": 3000, //自动播放
         "pageShow":true,
@@ -59,13 +57,13 @@
 <!--详情-->
 <div class="aui-content aui-margin-b-15">
     <ul class="aui-list aui-list-in">
-        <li class="aui-list-header"><h2>男大衣青年2017秋冬新款简约纯色中长款外套潮男毛呢大衣</h2></li>
+        <li class="aui-list-header"><h2>Aape男装秋冬宽松烫金印花假两件连帽卫衣</h2></li>
         <li class="aui-list-item">
             <div class="aui-list-item-label-icon">
                 <i class="aui-iconfont aui-icon-star"></i>
             </div>
             <div class="aui-list-item-inner">
-                <b>价格：499</b>
+                <b>价格：1190</b>
             </div>
         </li>
         <li class="aui-list-item">
