--- a/choose.html
+++ b/choose.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <link rel="stylesheet" type="text/css" href="./css/aui.css" />
+    <script src="script/goback.js"></script>
     <title>选购</title>
 </head>
 <body>
 <!--标签栏-->
 <header class="aui-bar aui-bar-nav">
-    <a class="aui-pull-left aui-btn" href="index.html">
+    <a class="aui-pull-left aui-btn" href="javascript:void (0);" onclick="GoBack()">
         <span class="aui-iconfont aui-icon-left"></span>
     </a>
     <div class="aui-title">选购（服装）</div>
@@ -18,37 +19,55 @@
 <!--具体物品-->
 <div class="aui-content aui-margin-b-15">
     <ul class="aui-list aui-media-list">
-        <a href="shop.html">
+        <a href="shop/clothes1-1.html">
             <li class="aui-list-item">
                 <div class="aui-media-list-item-inner">
                     <div class="aui-list-item-media">
-                        <img src="clothes-1-1.jpg">
+                        <img src="image/clothes/male3-1.png">
                     </div>
                     <div class="aui-list-item-inner">
                         <div class="aui-list-item-text">
-                            <div class="aui-list-item-title">男大衣青年2017秋冬新款简约纯色中长款外套潮男毛呢大衣</div>
+                            <div class="aui-list-item-title">Aape男装秋冬宽松烫金印花假两件连帽卫衣</div>
                             <div class="aui-list-item-right"></div>
                         </div>
                         <div class="aui-list-item-text">
-                            ¥499.00
+                            ¥990.00
                         </div>
                     </div>
                 </div>
             </li>
         </a>
-        <a href="shop.html">
+        <a href="shop/clothes1-2.html">
             <li class="aui-list-item">
                 <div class="aui-media-list-item-inner">
                     <div class="aui-list-item-media">
-                        <img src="clothes-2-1.jpg">
+                        <img src="image/clothes/female2-1.png">
                     </div>
                     <div class="aui-list-item-inner">
                         <div class="aui-list-item-text">
-                            <div class="aui-list-item-title">男大衣青年2017秋冬新款时尚修身翻领纯色外套男毛呢大衣</div>
+                            <div class="aui-list-item-title">Vero Moda2017冬季新款 高领落肩扁袖针织衫</div>
                             <div class="aui-list-item-right"></div>
                         </div>
                         <div class="aui-list-item-text">
                             ¥539.00
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </a>
+        <a href="shop/clothes2-1.html">
+            <li class="aui-list-item">
+                <div class="aui-media-list-item-inner">
+                    <div class="aui-list-item-media">
+                        <img src="image/clothes/female1-1.jpg">
+                    </div>
+                    <div class="aui-list-item-inner">
+                        <div class="aui-list-item-text">
+                            <div class="aui-list-item-title">女款大衣粉色</div>
+                            <div class="aui-list-item-right"></div>
+                        </div>
+                        <div class="aui-list-item-text">
+                            ¥600.00
                         </div>
                     </div>
                 </div>
