--- a/shop/book1.html
+++ b/shop/book1.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <meta charset="utf-8">
-            <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-            <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
-            <link rel="stylesheet" type="text/css" href="../css/aui.css" />
-            <title>详细</title>
-            <script src="../script/api.js"></script>
-            <script src="../script/aui-slide.js"></script>
-            <link rel="stylesheet" href="../css/aui-slide.css">
-            <script src="../script/goback.js"></script>
-        </head>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+    <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
+    <link rel="stylesheet" type="text/css" href="../css/aui.css" />
+    <title>详细</title>
+    <script src="../script/api.js"></script>
+    <script src="../script/aui-slide.js"></script>
+    <link rel="stylesheet" href="../css/aui-slide.css">
+    <script src="../script/goback.js"></script>
+</head>
 <body>
 <!--标签栏-->
 <header class="aui-bar aui-bar-nav">
     <a class="aui-pull-left aui-btn" href="javascript:void (0);" onclick="GoBack()">
         <span class="aui-iconfont aui-icon-left"></span>
     </a>
-    <div class="aui-title">女款大衣粉色</div>
+    <div class="aui-title">克苏鲁神话</div>
 </header>
 <!--轮播图片-->
 <link rel="stylesheet" type="text/css" href="/css/aui-slide.css" />
 <div id="aui-slide">
     <div class="aui-slide-wrap" >
         <div class="aui-slide-node bg-dark">
-            <img src="../image/clothes/female1-1.jpg" />
+            <img src="../image/book/book1/1.png"/>
         </div>
         <div class="aui-slide-node bg-dark">
-            <img src="../image/clothes/female1-2.jpg" />
+            <img src="../image/book/book1/2.png"/>
         </div>
+        <div class="aui-slide-node bg-dark">
+            <img src="../image/book/book1/3.png"/>
+        </div>
+
+      
+       
     </div>
     <div class="aui-slide-page-wrap"><!--分页容器--></div>
 </div>
@@ -39,7 +45,7 @@
         // "width":300,
         "height":300,
         "speed":300,
-        "autoPlay": 3000,
+        "autoPlay": 3000, 
         "pageShow":true,
         "pageStyle":'dot',
         "loop":true,
@@ -54,13 +60,13 @@
 <!--详情-->
 <div class="aui-content aui-margin-b-15">
     <ul class="aui-list aui-list-in">
-        <li class="aui-list-header"><h2>女款大衣粉色</h2></li>
+        <li class="aui-list-header"><h2>【赠徽章海报】正版包邮 克苏鲁神话合集 中文精装完整版 洛夫克拉夫特 克苏鲁神话全集克苏鲁的呼唤外国文学科幻小说 书籍 畅销书</h2></li>
         <li class="aui-list-item">
             <div class="aui-list-item-label-icon">
                 <i class="aui-iconfont aui-icon-star"></i>
             </div>
             <div class="aui-list-item-inner">
-                <b>价格：600</b>
+                <b>价格：45.80元</b>
             </div>
         </li>
         <li class="aui-list-item">
@@ -68,7 +74,7 @@
                 <i class="aui-iconfont aui-icon-cart"></i>
             </div>
             <div class="aui-list-item-inner">
-                库存：23
+                库存：1356
             </div>
         </li>
     </ul>
