--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <link rel="stylesheet" type="text/css" href="./css/aui.css" />
-    <style type="text/css">
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!--顶部导航栏-->
@@ -19,22 +18,28 @@
 <section class="aui-grid">
     <div class="aui-row">
         <div class="aui-col-xs-3">
-            <a href="choose.html">
+            <a href="choose/clothes.html">
                 <i class="aui-iconfont aui-icon-home"></i>
                 <div class="aui-grid-label">男女服装</div>
             </a>
         </div>
         <div class="aui-col-xs-3">
-            <i class="aui-iconfont aui-icon-gear"></i>
-            <div class="aui-grid-label">家用电器</div>
+            <a href="choose/electric.html">
+                <i class="aui-iconfont aui-icon-gear"></i>
+                <div class="aui-grid-label">家用电器</div>
+            </a>
         </div>
         <div class="aui-col-xs-3">
-            <i class="aui-iconfont aui-icon-map"></i>
-            <div class="aui-grid-label">箱包手袋</div>
+            <a href="choose/bags.html">
+                <i class="aui-iconfont aui-icon-map"></i>
+                <div class="aui-grid-label">箱包手袋</div>
+            </a>
         </div>
         <div class="aui-col-xs-3">
-            <i class="aui-iconfont aui-icon-calendar"></i>
-            <div class="aui-grid-label">珠宝饰品</div>
+            <a href="choose/jewelry.html">
+                <i class="aui-iconfont aui-icon-calendar"></i>
+                <div class="aui-grid-label">珠宝饰品</div>
+            </a>
         </div>
         <div class="aui-col-xs-3">
             <i class="aui-iconfont aui-icon-date"></i>
@@ -221,7 +226,7 @@
                 </div>
             </div>
         </li>
-        <li class="aui-list-item">
+        <li class="aui-list-item" id="index-last-li">
             <div class="aui-list-item-inner">
                 <div class="aui-list-item-title">8F图书文具</div>
                 <p></p>
