--- a/logistics.html
+++ b/logistics.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <link rel="stylesheet" type="text/css" href="./css/aui.css" />
-    <style type="text/css"></style>
-
 </head>
 <body>
 <!--标签栏-->
@@ -26,7 +24,7 @@
 <script type="text/javascript" src="/script/aui-tab.js" ></script>
 <script type="text/javascript">
     var tab = new auiTab({
-        element:document.getElementById(""),
+        element:document.getElementById("tab"),
         index:1,
         repeatClick:false
     },function(ret){
