--- a/logistics.html
+++ b/logistics.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <link rel="stylesheet" type="text/css" href="./css/aui.css" />
+    <script src="script/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 <!--标签栏-->
@@ -15,59 +16,39 @@
     </a>
     <div class="aui-title">物流管理</div>
 </header>
+
 <div class="aui-tab" id="tab">
-    <div class="aui-tab-item">待付款</div>
-    <div class="aui-tab-item aui-active"><div></div>待发货</div>
-    <div class="aui-tab-item">待收货</div>
-    <div class="aui-tab-item">未评价</div>
+    <div class="aui-tab-item aui-active" tapmode="" data-item-order="0">Item1</div>
+    <div class="aui-tab-item" tapmode="" data-item-order="1"><div></div>Item2</div>
+    <div class="aui-tab-item" tapmode="" data-item-order="2">Item3</div>
+    <div class="aui-tab-item" tapmode="" data-item-order="3">Item4</div>
 </div>
-<script type="text/javascript" src="/script/aui-tab.js" ></script>
+
+<script type="text/javascript" src="/script/api.js"></script>
+<script type="text/javascript" src="/script/aui-tab.js"></script>
 <script type="text/javascript">
+    apiready = function(){
+        api.parseTapmode();
+    }
     var tab = new auiTab({
         element:document.getElementById("tab"),
-        index:1,
-        repeatClick:false
+        // callback:function(o,dom){
+        //     console.log(o);
+        // }
     },function(ret){
-        console.log(ret);
-        index:1;
-        dom:el;
+        console.log(ret)
     });
 </script>
-<div class="aui-content aui-margin-b-15">
-    <li class="aui-list-item">
-        <div class="aui-list-item-inner">
-            <div class="aui-list-item-input">
-                <ul class="aui-list aui-media-list">
-                        <li class="aui-list-item">
-                            <div class="aui-media-list-item-inner">
-                                <div class="aui-list-item-media">
-                                    <img src="image/demo1.png">
-                                </div>
-                                <div class="aui-list-item-inner">
-                                    <div class="aui-list-item-text">
-                                        <div class="aui-list-item-title">货物1</div>
-                                    </div>
-                                    <div class="aui-list-item-text">
-                                        介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                </ul>
-            </div>
-        </div>
-    </li>
-</div>
 <!--底部工具栏-->
 <footer class="aui-bar aui-bar-tab" id="footer">
     <div class="aui-bar-tab-item aui-active" tapmode>
-        <a href="index1.html">
+        <a href="index.html">
             <i class="aui-iconfont aui-icon-home"></i>
             <div class="aui-bar-tab-label">首页</div>
         </a>
     </div>
     <div class="aui-bar-tab-item" tapmode>
-        <a href="classify1.html">
+        <a href="classify.html">
             <i class="aui-iconfont aui-icon-star"></i>
             <div class="aui-bar-tab-label">分类</div>
         </a>
