--- a/classify.html
+++ b/classify.html
@@ -20,78 +20,163 @@
     <ul class="aui-list aui-list-in">
         <li class="aui-list-header">
             <h3>男女服装</h3>
+
         </li>
-        <li class="aui-list-item aui-list-item-middle">
+        <a href="category/maleclothes.html">
+        <li class="aui-list-item aui-list-item-middle">         
             <div class="aui-list-item-inner aui-list-item-arrow">
-                <div class="aui-list-item-title">男装</div>
-            </div>
+                 <div class="aui-list-item-title">男装</div>
+            </div>        
         </li>
-        <li class="aui-list-item">
+    </a>
+    <a href="category/femaleclothes.html">
+        <li class="aui-list-item">           
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">女装</div>
-            </div>
+            </div>            
         </li>
+    </a>
     </ul>
     <ul class="aui-list aui-list-in">
         <li class="aui-list-header">
             <h3>家用电器</h3>
         </li>
+        <a href="category/TV.html">
         <li class="aui-list-item aui-list-item-middle">
             <div class="aui-list-item-inner aui-list-item-arrow">
-                <div class="aui-list-item-title">电视</div>
-            </div>
+                <div class="aui-list-item-title">电视
+                </div>
+         </div>
         </li>
+    </a>
+    <a href="category/refrigerator.html">
         <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">冰箱</div>
             </div>
         </li>
+    </a>
+    <a href="category/washingmachine.html">
         <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">洗衣机</div>
             </div>
         </li>
+    </a>
     </ul>
     <ul class="aui-list aui-list-in">
         <li class="aui-list-header">
             <h3>箱包手袋</h3>
         </li>
+        <a href="category/suitcase.html">
         <li class="aui-list-item aui-list-item-middle">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">拉杆箱</div>
             </div>
         </li>
+    </a>
+    <a href="category/backpack.html">
         <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">背包</div>
             </div>
         </li>
+    </a>
+        <a href="category/wallet.html">
         <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">钱包</div>
             </div>
         </li>
+    </a>
     </ul>
     <ul class="aui-list aui-list-in">
         <li class="aui-list-header">
             <h3>珠宝配饰</h3>
         </li>
+        <a href="category/necklace.html">
         <li class="aui-list-item aui-list-item-middle">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">项链</div>
             </div>
         </li>
+    </a>
+    <a href="category/ring.html">
         <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">戒指</div>
             </div>
         </li>
+    </a>
+    <a href="category/sunglasses.html">
         <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">墨镜</div>
             </div>
         </li>
+    </a>
+
+      
+    </ul>
+    <ul class="aui-list aui-list-in">
+        <li class="aui-list-header">
+            <h3>图书</h3>
+        </li>
+        <a href="category/foreignbook.html">
+        <li class="aui-list-item aui-list-item-middle">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">外国名著</div>
+            </div>
+        </li>
+    </a>
+    <a href="category/cnbook.html">
         <li class="aui-list-item">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">传统国学</div>
+            </div>
+        </li>
+    </a>      
+    </ul>
+        <ul class="aui-list aui-list-in">
+        <li class="aui-list-header">
+            <h3>手机数码</h3>
+        </li>
+        <a href="category/xiaomi.html">
+        <li class="aui-list-item aui-list-item-middle">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">小米</div>
+            </div>
+        </li>
+    </a>
+    <a href="category/apple.html">
+        <li class="aui-list-item">
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">苹果</div>
+            </div>
+        </li>
+    </a>      
+    </ul>
+ 
+    <ul class="aui-list aui-list-in">
+        <li class="aui-list-header">
+            <h3>食品</h3>
+
+        </li>
+        <a href="category/snack.html">
+        <li class="aui-list-item aui-list-item-middle">         
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                 <div class="aui-list-item-title">小吃零食</div>
+            </div>        
+        </li>
+    </a>
+    <a href="category/fruit.html">
+        <li class="aui-list-item">           
+            <div class="aui-list-item-inner aui-list-item-arrow">
+                <div class="aui-list-item-title">水果</div>
+            </div>            
+        </li>
+    </a>
+      <li class="aui-list-item">
             <div class="aui-list-item-inner aui-list-item-arrow">
                 <div class="aui-list-item-title">  </div>
             </div>
@@ -124,6 +209,7 @@
             <i class="aui-iconfont aui-icon-my"></i>
             <div class="aui-bar-tab-label">我的</div>
         </a>
+
     </div>
 </footer>
 </body>
