--- a/index.html
+++ b/index.html
@@ -42,18 +42,22 @@
             </a>
         </div>
         <div class="aui-col-xs-3">
+            <a href="choose/telephone.html">
             <i class="aui-iconfont aui-icon-date"></i>
             <div class="aui-grid-label">手机数码</div>
         </div>
         <div class="aui-col-xs-3">
+            <a href="choose/food.html">
             <i class="aui-iconfont aui-icon-cart"></i>
             <div class="aui-grid-label">食品生鲜</div>
         </div>
         <div class="aui-col-xs-3">
+            <a href="choose/furniture.html">
             <i class="aui-iconfont aui-icon-paper"></i>
             <div class="aui-grid-label">家居家装</div>
         </div>
         <div class="aui-col-xs-3">
+            <a href="choose/book.html">
             <i class="aui-iconfont aui-icon-video"></i>
             <div class="aui-grid-label">图书文具</div>
         </div>
